--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "produccion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "next": "^12.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "8.56.0",
