--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^12.3.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
